--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Ignore environment files
+# Ignore environment files (but keep examples)
 .env
-.env.example
+!.env.example
 
 # Python cache
 __pycache__/
